tests/NormalTests/paczka1/small_fuzzy/81335155.err
Error in line 3: e2Ta S587 27,5
Error in line 11: e2Ta S409 15,4
